--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,8 @@ development:
   pool: 5
   username: 
   password:
-
+  host: localhost
+	
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
@@ -45,6 +46,7 @@ test:
   pool: 5
   username: 
   password:
+host: localhost
 
 production:
   adapter: postgresql
@@ -53,3 +55,4 @@ production:
   pool: 5
   username: 
   password:
+host: localhost
