--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Ignore environment credentials
+
+/config/initializers/app_environment_variables.rb
