--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,7 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: bikepeddler_production
+  database: heavypeddler_production
   pool: 5
   username: pguser
-  password:
+  password: 
