change to deploy user home path

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,8 +4,8 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  # server_name example.com;
-  root /home/rails/apps/heavypeddler/current/public;
+  server_name www.bryanus.com;
+  root /home/deploy/apps/heavypeddler/current/public;
 
   location ^~ /assets/ {
     gzip_static on;
