add localhost to db.yml for production env

--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,7 @@ production:
   adapter: postgresql
   encoding: unicode
   database: bikepeddler_production
+  host: localhost
   pool: 5
   username: pguser
   password: 
