--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 # Ignore environment credentials
 
 /config/initializers/app_environment_variables.rb
+/config/database.yml
 
 #Ignore .DS_Store
 
