--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,3 +1,7 @@
+upstream unicorn {
+  server unix:/tmp/unicorn.heavypeddler.sock fail_timeout=0;
+}
+
 server {
   listen 80 default deferred;
   # server_name example.com;
