--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,8 +4,11 @@ upstream unicorn {
 
 server {
   listen 80 default deferred;
-  # server_name example.com;
+  server_name bryanus.com www.bryanus.com;
   root /home/username/apps/heavypeddler/current/public;
+
+  server_name staging.bryanus.com;
+  root /home/username/apps/heavypeddler_shared/current/public;
 
   location ^~ /assets/ {
     gzip_static on;
