update nginx conf for staging url

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,12 +3,9 @@ upstream unicorn {
 }
 
 server {
-  listen 80 default deferred;
+  listen 80;
   server_name bryanus.com www.bryanus.com;
   root /home/username/apps/heavypeddler/current/public;
-
-  server_name staging.bryanus.com;
-  root /home/username/apps/heavypeddler_shared/current/public;
 
   location ^~ /assets/ {
     gzip_static on;
