setting up for aws deploy

--- a/config/database.yml
+++ b/config/database.yml
@@ -52,7 +52,6 @@ production:
   adapter: postgresql
   encoding: unicode
   database: bikepeddler_production
-  host: localhost
   pool: 5
-  username:
+  username: bikepeddler
   password:
