--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,27 +1,20 @@
-upstream unicorn {
-  server unix:/tmp/unicorn.heavypeddler.sock fail_timeout=0;
-}
+#        include /etc/nginx/sites-enabled/*;
 
 server {
-  listen 80 default deferred;
-  # server_name example.com;
-  root /home/username/apps/heavypeddler/current/public;
+    server_name  bikepeddler.clickbooq.com;
+    access_log  /var/log/nginx/bikepeddler.access.log;
+    error_log   /var/log/nginx/bikepeddler.error.log;
+    listen       80 default_server;
+    root /home/deployer/bikepeddler/shared;
 
-  location ^~ /assets/ {
-    gzip_static on;
-    expires max;
-    add_header Cache-Control public;
-  }
+    location / {
+      proxy_pass   http://127.0.0.1:5011;
+    }
 
-  try_files $uri/index.html $uri @unicorn;
-  location @unicorn {
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_redirect off;
-    proxy_pass http://unicorn;
-  }
-
-  error_page 500 502 503 504 /500.html;
-  client_max_body_size 4G;
-  keepalive_timeout 10;
+    location ~ ^/assets/ {
+      gzip_static on; # to serve pre-gzipped version
+      expires 1y;
+      add_header Cache-Control public;
+      add_header ETag "";
+    }
 }
